feat(JavaFx): build for java 11, add maven dependencies